[package]
name = "apalis-dynamodb"
version = "0.1.0"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]
edition = "2021"
license = "MIT"


[dependencies]
apalis-core = { version = "0.5.3", default-features = false, features = ["sleep", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4.21"
futures = "0.3.30"
async-stream = "0.3.5"
tokio = { version = "1", features = ["full"] }
aws-sdk-dynamodb = "1.2"
aws-config = "1.5.4"
serde_dynamo = { version = "4.2", default-features = false, features = [
    "aws-sdk-dynamodb+1",
] }
chrono = "0.4.38"
thiserror = "1.0.62"
tracing = "0.1"
uuid = {version = "1.9.1", features = ["v4", "fast-rng"] }


